<resources>
    <string name="app_name">PlayBingo</string>

    <string name="nickname">Regisname</string>
    <string name="password">Regispass</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">My profile</string>
    <string name="menu_rating">Rating and review</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_insta">Instagram</string>
    <string name="menu_fb">Facebook</string>
    <string name="menu_email">Developers</string>
</resources>
