<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_insta"
                android:icon="@drawable/instaa"
                android:title="@string/menu_insta" />
            <item
                android:id="@+id/nav_fb"
                android:icon="@drawable/facebook"
                android:title="@string/menu_fb" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/gmail"
                android:title="@string/menu_email" />
        </menu>
    </item>

</menu>
